--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/header_event"
+        android:textStyle="bold"
         android:textAllCaps="true"
         android:textAppearance="?android:textAppearanceSmall" />
 
@@ -25,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
+        android:textStyle="bold"
         android:text="@string/header_date"
         android:textAllCaps="true"
         android:textAppearance="?android:textAppearanceSmall" />
@@ -39,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
+        android:textStyle="bold"
         android:text="@string/header_tsunami_alert"
         android:textAllCaps="true"
         android:textAppearance="?android:textAppearanceSmall" />
